# ootv-client

./: .gitignore  oracle.js
backend/: pyproject.toml
backend/backend/: ingestor.py  keywords.py  main.py  mappings.py
templates/: l5r.js
